--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -26,6 +26,9 @@ jobs:
         cd catalog/
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+    - name: Export .env variables
+      run: |
+          echo "SECRET_KEY=${{secrets.SECRET_KEY}}" >> .env
     - name: Run Tests
       run: |
         pytest -s
