--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -28,7 +28,7 @@ jobs:
         pip install -r requirements.txt
     - name: Export .env variables
       run: |
-          echo "SECRET_KEY=${{ variables.SECRET_KEY }}" >> .env
+          echo "SECRET_KEY=${{ vars.SECRET_KEY }}" >> .env
     - name: Run Tests
       run: |
         pytest -s
